@@ -10,9 +10,9 @@ option(UPDATE_TRANSLATIONS "Update source translation translations/*.ts files" O
 
 
 set(GLIB_MINIMUM_VERSION "2.50.0")
-set(LIBFMQT_MINIMUM_VERSION "0.14.0")
-set(LXQTBT_MINIMUM_VERSION "0.6.0")
-set(QT_MINIMUM_VERSION "5.7.1")
+set(LIBFMQT_MINIMUM_VERSION "0.15.0")
+set(LXQTBT_MINIMUM_VERSION "0.7.0")
+set(QT_MINIMUM_VERSION "5.10.0")
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
@@ -40,7 +40,7 @@ pkg_check_modules(
 
 set(LXQT_ARCHIVER_MAJOR_VERSION 0)
 set(LXQT_ARCHIVER_MINOR_VERSION 1)
-set(LXQT_ARCHIVER_PATCH_VERSION 0)
+set(LXQT_ARCHIVER_PATCH_VERSION 1)
 set(LXQT_ARCHIVER_VERSION ${LXQT_ARCHIVER_MAJOR_VERSION}.${LXQT_ARCHIVER_MINOR_VERSION}.${LXQT_ARCHIVER_PATCH_VERSION})
 add_definitions("-DLXQT_ARCHIVER_VERSION=\"${LXQT_ARCHIVER_VERSION}\"")
 
